# QPeltierUI

./: .gitignore  .gitmodules  CMakeLists.txt  QPeltierUI.rc  QPeltierUI.xcf  README.md  commands.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recorderwidget.cpp  recorderwidget.h  serialportworker.cpp  serialportworker.h  wake.cpp  wake.h  xyseriesiodevice.cpp  xyseriesiodevice.h
Utils/: check_wake.py  coefficients.py  csv_loader.py  fft.py  filter.py  iir.py  requirements.txt  show.py  utils.py
Utils/Results/: README.md  Record-0001.csv  Record-0002.csv
